crates/core/tests/snapshots/general__unexpected_eof.snap
---
source: crates/core/tests/general.rs
expression: "err.pretty_print(false, code, \"<code>\")"
---
error: Unexpected EOF, expected one of "(", "false", "fn(", "true", r#"\"[^\"]*\""#, r#"[a-zA-Z_][\\w_]*"#, r#"\\.\\d[\\d_]*"#, r#"\\d[\\d_]*"#, r#"\\d[\\d_]*\\."# or r#"\\d[\\d_]*\\.\\d[\\d_]*"# --> <code>:1:4
  |
1 | x =
  |    ^

